# sensor_puck

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  generate_fonts.sh  partition_table.csv  platformio.ini  sdkconfig
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart  sensor_puck.dart
app/test/: widget_test.dart
components/bm8563/: CMakeLists.txt  bm8563.cpp  bm8563.h
components/bme688/: CMakeLists.txt  bme688.cpp  bme688.h
components/lis2mdl/: CMakeLists.txt  lis2mdl.cpp  lis2mdl.h
components/lsm6dsox/: CMakeLists.txt  lsm6dsox.cpp  lsm6dsox.h
components/lvgl_fonts/: .gitignore  CMakeLists.txt  generate_fonts.sh
components/scd41/: CMakeLists.txt  scd41.cpp  scd41.h  sensirion_i2c_hal.cpp  sensirion_i2c_hal.h
components/sensirion/: CMakeLists.txt  scd41.cpp  scd41.h  sensirion_i2c_hal.cpp  sensirion_i2c_hal.h  sgp41.cpp  sgp41.h
components/st25dv/: CMakeLists.txt  st25dv.cpp  st25dv.h
components/util/: CMakeLists.txt  sync.h  types.h  util.cpp  util.h
firebase/: .firebaserc  firebase.json  public
main/: CMakeLists.txt  battery.cpp  battery.h  ble_peripheral_manager.cpp  ble_peripheral_manager.h  constants.h  data.cpp  data.h  display_driver.cpp  display_driver.h  idf_component.yml  preferences.cpp  preferences.h  sensor_puck.cpp  sync.h  util.h  wifi_manager.cpp  wifi_manager.h
main/sensors/: bme688.cpp  bme688.h  lsm6dsox.cpp
main/ui/: pages.cpp  pages.h  timer_page.cpp  timer_page.h  ui.cpp  ui.h
main/ui/fonts/: font_montagu_slab_16.c  font_montagu_slab_20.c  font_montagu_slab_24.c  font_montagu_slab_32_bold.c  font_montagu_slab_40.c
main/ulp_riscv/: CMakeLists.txt  main.c  sensirion_i2c_hal.c  sensirion_i2c_hal.h
pcb/: sensor_puck.kicad_pcb  sensor_puck.kicad_pro  sensor_puck.kicad_sch  sensor_puck.step
src/: constants.h  data.cpp  data.h  lv_xiao_round_screen.h  main.cpp  pages.cpp  pages.h  ui.cpp  ui.h
web/: README.md  pubspec.yaml
web/lib/: main.dart  sensor_puck_data.dart
web/linux/: CMakeLists.txt
web/test/: widget_test.dart
web/web/: index.html  manifest.json
web/windows/: CMakeLists.txt
(+16 files in other folders)
